<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityJuanJo"
    android:background="@color/black">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_Borrar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:text="@string/_ce"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/amarillo"/>

            <Button
                android:id="@+id/btn_BorrarUno"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/_borrarUno"
                android:textColor="@color/black"
                android:backgroundTint="@color/amarillo"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_Mas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_mas"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:backgroundTint="@color/amarillo"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_Menos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_menos"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/amarillo"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_Multiplicar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_multiplicarJuanJo"
                android:textSize="20sp"
                android:backgroundTint="@color/amarillo"
                android:textColor="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_Punto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_punto"
                android:textSize="20sp"
                android:backgroundTint="@color/gris"/>

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_Igual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_igual"
                android:textSize="20sp"
                android:backgroundTint="@color/gris"/>

            <Button
                android:id="@+id/btn_Dividir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_dividir"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/amarillo"/>

        </TableRow>

    </TableLayout>
    <TextView
        android:id="@+id/pantallaRegistro"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="51dp"
        android:gravity="start|center_vertical"
        android:text=""
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pantallaMostrarResultado"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/pantallaMostrarResultado"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="111dp"
        android:gravity="start|center_vertical"
        android:text="@string/_pantallaMostrar"
        android:textAlignment="viewStart"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>