<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity_dani">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="textEnd"
        android:text="@string/txtpantalla"
        android:textSize="43dp"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pantalla">

        <Button
            android:id="@+id/borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_borrar"
            android:textSize="30dp"
            android:backgroundTint="@color/amarillo"/>

        <Button
            android:id="@+id/CA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_ce"
            android:textSize="30dp"
            android:backgroundTint="@color/amarillo"
            android:layout_marginEnd="21dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <Button
            android:id="@+id/siete"
            android:text="@string/_7"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"
            />
        <Button
            android:id="@+id/ocho"
            android:text="@string/_8"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"
            android:layout_marginStart="5dp"/>
        <Button
            android:id="@+id/nueve"
            android:text="@string/_9"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"
            android:layout_marginStart="5dp"/>
        <Button
            android:id="@+id/division"
            android:text="@string/_dividir"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillo"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <Button
            android:id="@+id/cuatro"
            android:text="@string/_4"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/cinco"
            android:text="@string/_5"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/seis"
            android:text="@string/_6"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/multiplicar"
            android:text="@string/_multiplicar"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillo"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear3">

        <Button
            android:id="@+id/uno"
            android:text="@string/_1"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/dos"
            android:text="@string/_2"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/tres"
            android:text="@string/_3"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/suma"
            android:text="@string/_mas"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillo"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear4">

        <Button
            android:id="@+id/igual"
            android:text="@string/_igual"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/cero"
            android:text="@string/_0"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/punto"
            android:text="@string/_punto"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gOscuro"/>
        <Button
            android:id="@+id/resta"
            android:text="@string/_menos"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillo"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>