<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.MainActivity"
    android:background="@color/azulClaro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ApellidosNombre"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="200dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginVertical="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            >

            <Button
                android:id="@+id/calculadoraJuanjo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_juanjo"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/calculadoraDani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_dani" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/calculadoraElian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_elian" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/menuImc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_imc" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SalirPrograma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salir_del_programa"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>